name:                amulet
version:             0.0.0.1
synopsis:            A simple functional programming language.
homepage:            https://gitlab.com/squiddev/amulet
license:             MIT
license-file:        LICENSE
author:              Matheus Magalhães de Alcantara
maintainer:          matheus.de.alcantara@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable amulet
  main-is:             Main.hs
  build-depends:       base       >= 4.8   && < 5.0
                     , mtl        >= 2.2   && < 2.3
                     , containers >= 0.5   && < 0.6
                     , parsec     >= 3.1.2 && < 3.2
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-amulet
  type:                exitcode-stdio-1.0
  main-is:             TestRun.hs
  build-depends:       base       >= 4.8   && < 4.9
                     , mtl        >= 2.2   && < 2.3
                     , containers >= 0.5   && < 0.6
                     , parsec     >= 3.1.2 && < 3.2
  hs-source-dirs:      src, test
  default-language:    Haskell2010
