name:                amulet
version:             0.1.0.0
synopsis:            An experimental, purely-functional programming language inspired by OCaml, Haskell, PureScript and Idris.
homepage:            https://github.com/SquidDev/amulet
license:             MIT
license-file:        LICENSE
author:              CoderPuppy, demhydraz, SquidDev
maintainer:          bonzoweb@hotmail.co.uk, matheus.de.alcantara@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable amulet
  build-depends:      mtl        == 2.2.*
                    , base       == 4.9.*
                    , parsec     == 3.1.*
                    , containers == 0.5.*
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
